[package]
name = "rust-coinjoin"
version = "0.1.0"
authors = ["kanna"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = { version = "0.16.1", features = ["keys-bip39"] }
bitcoin = "0.25.0"
base64 = "0.13.0"
serde = "1.0.136"
serde_json = "1.0.78"

[dev-dependencies]
